Fix text and image overflow for pending cards

--- a/client/src/styles/cardPendingTrade.css
+++ b/client/src/styles/cardPendingTrade.css
@@ -56,6 +56,7 @@
         color: white;
         font-size: 1.5em;
         width: 50%;
+        height: 80%;
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -139,6 +140,7 @@
         flex: 2;
         margin: 5%;
         width: 50%;
+        height: 100%;
     }
 
     .ctCenter{
@@ -164,6 +166,7 @@
         color: white;
         font-size: 1.5em;
         width: 50%;
+        height: 100%;
         overflow: hidden;
         text-overflow: ellipsis;
     }
